--- a/MeiZi/Podfile
+++ b/MeiZi/Podfile
@@ -5,4 +5,5 @@ target ‘MeiZi’ do
   pod 'SDWebImage', '~> 4.0.0-beta2'
   pod 'MJExtension', '~> 3.0.13'
   pod 'MJRefresh', '~> 3.1.12'
+  pod 'Shimmer'
 end
